1. 讓Tests可以存取套件內internal methods 2. 修改單元測試，目前第一個test過了 3. 加上測試驗證碼 . TODO : 1. 把多餘架構拿掉 2. PRR

--- a/ECPay.SDK.Einvoice/ECPay.SDK.Einvoice.csproj
+++ b/ECPay.SDK.Einvoice/ECPay.SDK.Einvoice.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -46,6 +46,12 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ApiUrl.Stage.Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Tests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
