1. 把所有預設netCore專案換回netStandard，以獲得更大相容性 2. 修正產生的編譯錯誤

--- a/ECPay.SDK.Logistics/ECPay.SDK.Logistics.csproj
+++ b/ECPay.SDK.Logistics/ECPay.SDK.Logistics.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+  <PropertyGroup Label="Project">
+    <OutputType>Library</OutputType>
+    <TargetFramework>netstandard2.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Label="Nuget">
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1-preview</Version>
   </PropertyGroup>
 
   <ItemGroup>
