--- a/ECPay.SDK.Payment/ECPay.SDK.Payment.csproj
+++ b/ECPay.SDK.Payment/ECPay.SDK.Payment.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.1.0" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.5.3" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
   </ItemGroup>
 
   <ItemGroup>
