--- a/ECPay.SDK/ECPay.SDK.csproj
+++ b/ECPay.SDK/ECPay.SDK.csproj
@@ -15,6 +15,9 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>$(AssemblyName).Einvoice</_Parameter1>
     </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(AssemblyName).Payment</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
